--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-paper": "^4.12.4",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
   },
@@ -23,6 +24,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
+    "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
   },
   "private": true
